added a method to all repo.javas and added 4 integration test. All tests pass